fixing buttons controls (master music and dark mode)

--- a/styles/style.css
+++ b/styles/style.css
@@ -29,6 +29,7 @@ body {
 main {
   width: 100%;
   height: 100%;
+  margin: 10px; /* to space button controls */
   display: flex;
   flex-direction: column;
   align-items: center;
